fixed the list element border on mobile, made sidebar border box box sizing. tweaked the "close-mode" toggle button position to feel better on mobile.

--- a/styles/global.css
+++ b/styles/global.css
@@ -9,7 +9,7 @@ html, body{
     --rose-color: #E06C75; 
     --orange-color: #D19A66; 
     
-    --sidebar-width: 270px;
+    --sidebar-width: 320px;
 
     scroll-behavior: smooth;
     min-height: 100%;
