--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar{
-    /* box */
+    box-sizing: border-box;
     background-color: var(--sidebar-background-color);
     position: fixed;
 
@@ -31,13 +31,12 @@
 }
 
 .sidebar .toggle-button{
-    box-sizing: border-box;
+    position: relative;
     background-color: transparent;
     border-radius: 30%;
     color: var(--purple-color);
     border: none;
     font-size: 30px;
-    margin-right: 40px;
     margin-left: 20px;
     width: 54px;
     height: 54px;
@@ -71,7 +70,7 @@
 }
 
 .toggle-button.close-mode{
-    transform: translateX(200%);
+    transform: translateX(70px);
 }
 
 .sidebar .toggle-button:hover{
@@ -83,7 +82,7 @@
         max-width: var(--sidebar-width);
     }
 
-    .sidebar .toggle-button{
-        margin-right: 0px;
+    .toggle-button.close-mode{
+     transform: translateX(200%);
     }
 }
